--- a/project5.html
+++ b/project5.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+<div class="cursor"></div>
 <div class="side-scroller">
     <h1>W.</h1>
     <h2 class="vertical-text">Honors</h2>
@@ -49,8 +49,16 @@
       </div>
     </div>
 
- <div class="page3"></div>   
-
+ <div class="page3">
+  <img src="cynthia.jpg" alt="">
+  <h1>About Me</h1>
+  <p>I'm Vaibhav Sharma, a pre-final year student at NIT Hamirpur. I'm thrilled to showcase the frontend of a award-winning portfolio website, skillfully crafted by Cynthia Ugwu.
+    A special thank you to those of you reading this through my LinkedIn post. Your support is truly appreciated. If you find the work impressive, please take a moment to like the post and leave a comment. Your feedback means a lot.
+  </p>
+  <h3>SUBSCRIBE TO MY YOUTUBE CHANNEL↗ </h3>
+  <h4>(forgot to mention) </h4>
+ </div>   
+<script src="project5.js"></script>
 </body>
 </html>
 
