--- a/project5.html
+++ b/project5.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="project5.css">
 </head>
 <body>
-
+<div class="loader">
+  <h1>0%</h1>
+</div>
 <div class="cursor"></div>
 <div class="side-scroller">
     <h1>W.</h1>
@@ -19,7 +22,7 @@
     <button>MENU+</button>
     </nav>
 
-    <div class="main">
+ <div class="main">
         <div class="page1">
             
                 <div class="remaing-part">
@@ -57,7 +60,11 @@
   </p>
   <h3>SUBSCRIBE TO MY YOUTUBE CHANNEL↗ </h3>
   <h4>(forgot to mention) </h4>
- </div>   
+ </div> 
+</div>
+ <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js" integrity="sha512-LQQDtPAueBcmGXKdOBcMkrhrtqM7xR2bVrnMtYZ8ImAZhFlIb5xrMqQ6uZviyeSB+4mYj89ta8niiCIQM1Gj0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
 <script src="project5.js"></script>
 </body>
 </html>
