day_2_second_commit

--- a/project5.html
+++ b/project5.html
@@ -4,26 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="project5.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
 <body>
+
 <div class="loader">
   <h1>0%</h1>
 </div>
-<div class="cursor"></div>
 <div class="side-scroller">
-    <h1>W.</h1>
-    <h2 class="vertical-text">Honors</h2>
+  <h1>W.</h1>
+  <h2 class="vertical-text">Honors</h2>
 </div>
 
+<div class="cursor"></div>
 
-<nav><h2>Cyndi Okeke</h2> 
+ <div class="main"
+ >
+  
+
+
+  <nav><h2>Cyndi Okeke</h2> 
     <button>MENU+</button>
     </nav>
-
- <div class="main">
-        <div class="page1">
+   <div class="page1">
             
                 <div class="remaing-part">
                     <h1>PRODUCT</h1>
@@ -35,18 +39,18 @@
                     <button class="first">⬇</button>
                     <button class="second" > ⬇</button>
                 </div>
-            </div>
+      </div>
 
     <div class="page2">
-      <div id="one">
+      <div id="one" data-image="plug.png">
         <h1>THE PLUG</h1>
         <h4>2021</h4>
       </div>
-      <div id="two">
+      <div id="two" data-image="ixperience.png">
         <h1>IXPERIENCW</h1>
         <h4>2022</h4>
       </div>
-      <div id="three">
+      <div id="three" data-image="hudu.png">
         <h1>HUDU</h1>
         <h4>2020</h4>
       </div>
@@ -62,9 +66,10 @@
   <h4>(forgot to mention) </h4>
  </div> 
 </div>
- <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js" integrity="sha512-7Au1ULjlT8PP1Ygs6mDZh9NuQD0A5prSrAUiPHMXpU6g3UMd8qesVnhug5X4RoDr35x5upNpx0A6Sisz1LSTXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/ScrollTrigger.min.js" integrity="sha512-LQQDtPAueBcmGXKdOBcMkrhrtqM7xR2bVrnMtYZ8ImAZhFlIb5xrMqQ6uZviyeSB+4mYj89ta8niiCIQM1Gj0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  
+
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js" integrity="sha512-qF6akR/fsZAB4Co1QDDnUXWnaQseLGXoniuSuSlPQK6+aWhlMZcHzkasCSlnWoe+TJuudlka1/IQ01Dnhgq95g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollTrigger.min.js" integrity="sha512-IHDCHrefnBT3vOCsvdkMvJF/MCPz/nBauQLzJkupa4Gn4tYg5a6VGyzIrjo6QAUy3We5HFOZUlkUpP0dkgE60A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 <script src="project5.js"></script>
 </body>
 </html>
